# SouvlakiBrowser

./: .gitignore  Main.py  README.md  app.py  browserUi.py  browserUi.ui  config.json  filters.txt  jsonworker.py  main.py  pyproject.toml  requirements.txt  settings.py  settings.ui
assets/: downloadManager.ui
assets/ui/: downloader.ui
components/: browser.py  browserUi.py  browserUi.ui  downloader.py  downloaderUi.py  downloaderUi.ui  downloading.ui  movableLabel.py  tab.py  tabUi.py  tabUi.ui  titleBar.py  titleBarUi.py  webPage.py  webPageUi.py  webPageUi.ui
config/: settings.ui
images/: test.txt
modules/: app.py  config.py  downloader.py  downloading.py  settings.py  window.py
src/: main.py
src/components/: browser.py  browserwindow.py  downloadmanagerwidget.py  downloadwidget.py  tabwidget.py  webpage.py  webpopupwindow.py  webview.py
src/lib/: config.py
utils/: adBlocker.py  downloadFolder.py  downloadFolderOld.py
