[tool.poetry]
name = "souvlaki-browser"
version = "0.1.0"
description = ""
authors = ["Souvlaki42 <souvlaki420@gmail.com>"]
readme = "README.md"
packages = [{include = "souvlaki_browser"}]

[tool.poetry.dependencies]
python = "^3.11"
packaging = "21.3"
pyparsing = "3.0.9"
pyqt5 = "5.15.7"
pyqt5-qt5 = "5.15.2"
pyqt5-sip = "12.11.0"
pyqtwebengine = "5.15.6"
pyqtwebengine-qt5 = "5.15.2"
qdarkstyle = "3.1"
qtpy = "2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
